--- a/template-animation.html
+++ b/template-animation.html
@@ -30,11 +30,21 @@
         text-align: center;
         margin-top: 40px;
         } 
+        .btn{
+            padding: 1rem;
+            background-color: aquamarine;
+            border: 0;
+            transition: all 1s;
+        }
+        .btn:hover {
+            background-color: blueviolet;
+            transform: scale(1.2);
+        }
     </style>
 </head>
 
 <body>
-
+    <button class="btn">button</button>
     <p><strong>Animation example: </strong></p>
     <div></div>
 
